--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "4.5.2",
+    "bootstrap-social": "5.1.1",
+    "font-awesome": "4.7.0",
+    "google-map-react": "^2.1.9",
     "react": "^17.0.1",
+    "react-card-flip": "^1.0.11",
     "react-dom": "^17.0.1",
     "react-popper": "1.3.6",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0",
     "reactstrap": "8.5.1",
     "typeface-open-sans": "^1.1.13",
