--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "font-awesome": "4.7.0",
     "google-map-react": "^2.1.9",
     "react": "^17.0.1",
+    "react-accessible-accordion": "^3.3.3",
     "react-card-flip": "^1.0.11",
     "react-dom": "^17.0.1",
     "react-popper": "1.3.6",
