--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-popper": "1.3.6",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0",
+    "react-sticky-table": "^5.1.11",
     "reactstrap": "8.5.1",
     "typeface-open-sans": "^1.1.13",
     "typeface-raleway": "^1.1.13",
@@ -30,7 +31,6 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-    
   },
   "browserslist": {
     "production": [
